[tool.poetry]
name = "weatherpro"
version = "0.1.0"
description = ""
authors = ["Kerry Hatcher <kerry.hatcher@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
bokeh = "^3.0.3"
requests = "^2.28.1"
pyproj = "^3.4.1"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
